--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -118,6 +118,15 @@
 }
 
 
+@online{clsidPackageJson,
+ author = {Morawietz, Jan},
+ year = {2018},
+ title = {package.json config gets ignored},
+ url = {https://github.com/felixrieseberg/electron-windows-interactive-notifications/issues/6},
+ urldate = {2018-07-26}
+}
+
+
 @online{codeFirst,
  author = {Tutorials, Entity Framework},
  title = {Code First development with Entity Framework},
@@ -151,6 +160,15 @@
  url = {http://www.entityframeworktutorial.net/code-first/dataannotation-in-code-first.aspx},
  address = {http://www.entityframeworktutorial.net},
  urldate = {2018-01-26}
+}
+
+
+@online{desktopNotificationSpec,
+ author = {Hearn, Mike and Hammond, Christian and McCann, William Jon},
+ year = {2018},
+ title = {Desktop Notifications Specification},
+ url = {https://developer.gnome.org/notification-spec/},
+ urldate = {2018-07-26}
 }
 
 
@@ -238,6 +256,15 @@
 }
 
 
+@online{electronNotifications,
+ author = {GitHub},
+ year = {2018},
+ title = {Notifications (Windows, Linux, macOS)},
+ url = {https://electronjs.org/docs/tutorial/notifications},
+ urldate = {2018-07-26}
+}
+
+
 @online{electronQuickStart,
  author = {GitHub},
  year = {2018},
@@ -254,6 +281,16 @@
  url = {https://discuss.atom.io/t/how-to-use-electron-apis-inside-angular2-app/41674/12},
  address = {Atom Discuss},
  urldate = {2018-07-25}
+}
+
+
+@online{eNotWinAppId,
+ author = {Biswanger, Gregor},
+ year = {2017},
+ title = {Notification API do not work with Windows 10 16299.19 (fall creators update)},
+ url = {https://github.com/electron/electron/issues/10864},
+ address = {GitHub},
+ urldate = {2018-07-26}
 }
 
 
@@ -355,6 +392,16 @@
  title = {Angular Material Icons},
  url = {https://v5.material.angular.io/components/icon/overview},
  urldate = {2018-07-13}
+}
+
+
+@online{mdnNotification,
+ author = {Mozilla},
+ year = {2018},
+ title = {Notification Documentation},
+ url = {https://developer.mozilla.org/en-US/docs/Web/API/notification/Notification},
+ address = {MDN},
+ urldate = {2018-07-26}
 }
 
 
@@ -476,12 +523,30 @@
 }
 
 
+@online{showAppId,
+ author = {Kale, Gaurav},
+ year = {2013},
+ title = {How to show more details for shortcuts in Windows 8.1, Windows 8 and Windows 7},
+ url = {https://winaero.com/blog/how-to-show-more-details-for-shortcuts-in-windows-8-1-windows-8-and-windows-7/},
+ urldate = {2018-07-26}
+}
+
+
 @online{staticFiles,
  author = {Anderson, Rick},
  year = {14.10.2016},
  title = {Introduction to working with static files in ASP.NET Core},
  url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/static-files},
  urldate = {2017-03-09}
+}
+
+
+@online{toastContent,
+ author = {Microsoft},
+ year = {2017},
+ title = {Toast Content},
+ url = {https://docs.microsoft.com/en-us/windows/uwp/design/shell/tiles-and-notifications/adaptive-interactive-toasts},
+ urldate = {2018-07-26}
 }
 
 
@@ -501,6 +566,24 @@
  title = {Task-based Asynchronous Programming},
  url = {https://docs.microsoft.com/en-us/dotnet/standard/parallel-programming/task-based-asynchronous-programming},
  urldate = {2018-02-02}
+}
+
+
+@online{winIntNot,
+ author = {Rieseberg, Felix},
+ year = {2018},
+ title = {Electron Windows Interactive Notifications},
+ url = {https://github.com/felixrieseberg/electron-windows-interactive-notifications},
+ urldate = {2018-07-26}
+}
+
+
+@online{winNot,
+ author = {Rieseberg, Felix},
+ year = {2018},
+ title = {Electron Windows Notifications},
+ url = {https://github.com/felixrieseberg/electron-windows-notifications},
+ urldate = {2018-07-26}
 }
 
 
