--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,6 +5,10 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{com}{COM}{Component Object Model}
+\newacronym{guid}{GUID}{Globally Unique Identifier}
+\newacronym{wdc}{WDC}{Windows Dev Center}
+\newacronym{uwp}{UWP}{Universal Windows Platform}
 \newacronym{ipc}{IPC}{Inter-process Communication}
 \newacronym{ui}{UI}{User Interface}
 \newacronym{ms}{MS}{Microsoft}
