--- a/Report/pages/electron.tex
+++ b/Report/pages/electron.tex
@@ -62,79 +62,78 @@ This package checks the user agent property to determine whether the application
 
 \Section{Menus}
 
-A big difference between web pages and traditional desktop applications are menues. Web applications often integrate menues into the web page sometimes as navigation bars sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border of your application window and for Ubuntu (Unity) and OSX it is also a menu bar but located at the top of your screen. Electron offers \gls{api}s for the traditional menu.
+A big difference between web pages and traditional desktop applications is the placement of menues. Web applications often integrate menues into the web page, sometimes as navigation bars, sometimes at prominent locations in the layout. For desktop applications the placement of the menu is rather clear. For Windows applications it is a menu bar right under the top border of your application window and for Ubuntu (Unity) and OSX it is also a menu bar, but located at the top of your screen.
 
 \Subsubsection{Application Menu}
 
 
-For the Jukebox project a custom \lstcode{MenuItem} class was created, the \lstcode{AngularMenuItem}. This is due to the fact, that a menu is needed in the pure web version as well as in the desktop version. With this approach the custom class can be used for the entire project and only a small part, namly the \lstcode{MenuItemService}, has to know the Electron \gls{api}s. Since Electron is doing some initialization it is not possible to use a custom \lstcode{MenuItem} even if the custom \lstcode{MenuItem} has the same signature. Therefore a converter method was implemented, as shown in \myautoref{lst:createElectronMenuItem.ts}. This method creates an instance of \lstcode{Electron.MenuItem} for each \lstcode{AngularMenuItem} recursively.
+For the Jukebox project, a custom \lstcode{MenuItem} class was created: the \lstcode{AngularMenuItem}. This is due to the fact that a menu is needed for both the web version as well as the desktop version. With this approach, the custom class can be used for the entire project and only a small part, namely the \lstcode{MenuItemService}, depends on the Electron \gls{api}s. Since Electron is doing some initialization, it is not possible to use a custom \lstcode{MenuItem} object, even if the custom object has the same signature. Therefore, a converter method was implemented, as shown in \myautoref{lst:createElectronMenuItem.ts}. This method creates an instance of \lstcode{Electron.MenuItem} for each \lstcode{AngularMenuItem} recursively.
 
 \file{createElectronMenuItem.ts}{Excerpt of the Jukebox MenuItemService class.}{JavaScript}
 
-\Subsubsection{Systemtray}
+\Subsubsection{System Tray}
 
-Another form of menu is the system tray and its menu. Especially for applications which are supposed to run in the background and only show a notification if an event occurs, the ability to minimize it to the system tray is important. Electron supports this with the \lstcode{Electron.remote.Tray} \gls{api}.
+Another style of a menu is the system tray and its contextmenu. Especially for applications which are supposed to run in the background and only show a notification when an event occurs, the ability to minimize the application to the system tray is very important. Electron supports this feature with the \lstcode{Electron.remote.Tray} \gls{api}.
 
-For this a picture has to be set and then a menu may be specified. The \lstcode{Electron.remote.Tray} object takes a \lstcode{Electron.remote.NativImage} or a \lstcode{string} as constructor arguments. Both variants were tried but the \lstcode{string} variant did not show the picture even though the system tray was there and clickable.
+The \lstcode{Electron.remote.Tray} object takes a \lstcode{Electron.remote.NativeImage} or a \lstcode{string} as constructor arguments. Both variants were tried, but the \lstcode{string} variant did not show the icon, even though the system tray was there and clickable. Once the system tray object is created, a menu may be set.
 
 \file{browserWindowClose.js}{The modified \lstcode{BrowserWindow.close()} event.}{JavaScript}
 
-In the Jukebox project the system tray was used to minimize the application without quitting it when all windows were closed. To close the application a \enquote{Quit} menu item was added to the system tray. To make this work the \lstcode{BrowserWindow.close()} event had to be modified, as shown in \myautoref{lst:browserWindowClose.js}. The \enquote{Quit} menu item's \lstcode{click()} handler then used \gls{ipc} to tell the main process to quit the application via a call to \lstcode{app.quit()}.
+In the Jukebox project, the system tray was used to minimize the application without quitting it when all windows were closed. To quit the application, a \enquote{Quit} menu item was added to the system tray. For this purpose, the \lstcode{BrowserWindow.close()} event had to be modified, as shown in \myautoref{lst:browserWindowClose.js}. The \enquote{Quit} menu item's \lstcode{click()} handler then uses \gls{ipc} to tell the main process to quit the application via a call to \lstcode{app.quit()}.
 
 \file{trayMenuTemplate.ts}{Example of a menu template.}{JavaScript}
 
-In the Jukebox project the system tray menu was implemented using templates, as shown in \myautoref{lst:trayMenuTemplate.ts}. This means an array of anonymous objects is created which all follow a certain signature. The properties of these objects are then read by the Electron framework and a \lstcode{Electron.MenuItem} is created using this blueprint. The advantages are that the developer only has to specify the properties needed for this menu item and the framework can ignore additional properties. Therefore it is possible to use existing custom objects in this array, without the need for implementing interfaces.
+In the Jukebox project, the system tray menu was implemented using templates, as shown in \myautoref{lst:trayMenuTemplate.ts}. This means an array of anonymous objects is created which all follow a certain signature. The properties of these objects are then read by the Electron framework and an \lstcode{Electron.MenuItem} is created using this blueprint. The advantages are that the developer only has to specify the properties needed for this menu item and the framework can ignore additional properties. Therefore, it is possible to use existing custom objects in this array, without the need for implementing interfaces.
 
-\Subsubsection{Challenges while implementing Menus}
+\Subsubsection{Challenges while Implementing Menus}
 
-One issue was that of routing from a menu item. Many menu items are used to navigate through the application \zB to get to the settings page. In Angular routing is usually done via the \lstcode{Router.navigateByUrl()} method. If the \lstcode{click()} handler of a menu item was set to just this line of code a navigation would occur but the old page would still be displayed and the new page would be displayed beneith it.
+One of the challenges encountered was routing from a menu item's \lstcode{click()} handler. Many menu items are used to navigate through the application \zB to get to the settings page. In Angular, routing is usually done via the \lstcode{Router.navigateByUrl()} method. If the \lstcode{click()} handler of a menu item was set to just this line of code, navigation would occur, but the old page was still displayed and the new page was added underneath.
 
-Angular uses zone.js to enable its \lstcode{<router-outlet />} feature of exchanging parts of the web page at runtime and manage different execution context's \cite{zoneJS}. Since the \lstcode{click()} event handler is called from the Electron framework it is beeing called from a different context which is causing this weired behavior.
+Angular uses zone.js to enable its \lstcode{<router-outlet />} feature of exchanging parts of the web page at runtime and manage different execution contexts \cite{zoneJS}. Since the \lstcode{click()} event handler is called from the Electron framework, it is called from a different context, which causes this faulty behavior.
 
-To fix this a reference to the \lstcode{NgZone} object is needed which can be obtained through injection. The \lstcode{click()} handler then has to be modified to run the navigation code in the corresponding zone, as shown in \myautoref{lst:zoneNavigation.ts}.
+To fix this situation, a reference to the \lstcode{NgZone} object is needed, which can be obtained through injection. The \lstcode{click()} handler then has to be modified to run the navigation code in the corresponding zone, as shown in \myautoref{lst:zoneNavigation.ts}.
 
 \file{zoneNavigation.ts}{Fixed \lstcode{click()} handler.}{JavaScript}
 
-Another issue is that of top level menu items not behaving correctly. This is an ongoing issue and results in top level items ignoring the change of values of the \lstcode{enabled} and \lstcode{visibile} properties. There is no fix for this currently. \cite{topMenuItems}
+Another issue is that of top level menu items not behaving correctly. This is a knwon and ongoing issue of the Electron framework. It results in top level items ignoring the change of values of the \lstcode{enabled} and \lstcode{visibile} properties. Currently, there is no fix for this bug. \cite{topMenuItems}
 
 \Section{Notifications}
 
-Electron provides a basic \gls{api} for all operating systems to send notifications to the user. This is done through the \gls{html} 5 notification \gls{api}.
+Electron provides a basic \gls{api} for all operating systems to send notifications to the user. For this the \gls{html} 5 notification \gls{api} is used.
 
-
-The globally available \lstcode{Notification} object is used to manage a websites permission to display notifications. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} values tells the developer that the user choice is unknown at this moment. In this state the browser behaves as if the user denied permission which results in no notifications beeing shown. With the static \lstcode{Notification.requestPermission()} method the user is asked whether he wants to see netofications or not.
+The globally available \lstcode{Notification} object is used to manage the permission to display notifications for each web page. This is done through the static \lstcode{Notification.permission} property which returns one of the three following values: \enquote{granted}, \enquote{denied}, or \enquote{default}. The \enquote{default} value tells the developer that the user's choice is unknown at this moment. In this state, the browser behaves as if the user denied permission, which results in showing no notifications at all. Using the static \lstcode{Notification.requestPermission()} method, the user is asked whether he wants to see notifications or not.
 
 \file{html-notification.ts}{Displaying a basic HTML notification.}{JavaScript}
 
-Once permission is granted a notification can be displayed as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object but these are not implemented in all browsers and therefore should not be relyed on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api} but used for the Windows specific package. Since the constructor uses templates it does not \revMark{hurt} to use it in other environments since it is simply beeing ignored. \cite{mdnNotification}
+Once permission is granted, a notification can be displayed, as shown in \myautoref{lst:html-notification.ts}. The \gls{html} 5 notification \gls{api} offers many more properties on a notification object, but these are not implemented in all browsers and therefore should not be relied on. The \lstcode{appId} property is not part of the \gls{html} 5 notification \gls{api}, but is used for the Windows-specific package. The property can be used in non-Windows environments without risk because the constructor uses templates and the property will simply be ignored, if not needed. \cite{mdnNotification}
 
 \Subsubsection{Simple Windows Notifications}
 
-Under Windows the \enquote{electron-windows-notifications} \cite{winNot} and \enquote{electron-windows-interactive-notifications} \cite{winIntNot} packages can be used to create more visually apealling notifications which also can be interacted with.
+Under Windows, the \enquote{electron-windows-notifications} \cite{winNot} and \enquote{electron-windows-interactive-notifications} \cite{winIntNot} packages can be used to create visually sophisticated, interactive notifications.
 
-The \enquote{electron-windows-notifications} package offers two kinds of notification. First the \lstcode{TileNotification}. This updates the primary or secondary tiles of the application and requires it to be run inside the \gls{uwp} model. Second is the \lstcode{ToastNotification}. This is the \enquote{standard} notification which is usually displayed on the right bottom and can later on be found in the Action Center.
+The \enquote{electron-windows-notifications} package offers two kinds of notifications. The first type is called \lstcode{TileNotification}. This notification updates the primary or secondary tiles of the application. In this case the application must be run inside the \gls{uwp} model. The second type is called \lstcode{ToastNotification}. This is the \enquote{standard} notification which is usually displayed on the bottom right corner of the screen and can later on be found in the Windows Action Center.
 
-For any notification to be shown the application has to have an \lstcode{appId} set up. Configuring this \lstcode{appId} is a multi-step procedure. First a start menu folder has to be created for the application. Then a shortcut to the application has to be placed in this folder. During testing it was discovered that it does not matter where this shortcut points to, to show the notification. If, however, the shortcut points to the wrong file the click action on the notification might not work as expected. This shortcut then needs to have its \enquote{System.AppUserModel.ID} data store property set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry to show the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. Then during the startup sequence of the application the \lstcode{app.setAppUserModelId()} method has to be called. Finally every notification object whether it is the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification} has to have the \lstcode{appId} property set. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique, in the Jukebox project a \gls{guid} was used.
+A prerequisite for showing any kind of notification is that the application has set up an \lstcode{appId}. Configuring this \lstcode{appId} is a multi-step procedure. First, a start menu folder has to be created for the application. Then, a shortcut to the application has to be placed in this folder. During testing, it was discovered that it does not matter where this shortcut points to in order to show the notification. If, however, the shortcut points to the wrong file, the click action on the notification might not work as expected. Next, the \enquote{System.AppUserModel.ID} data store property of the shortcut must be set to the \lstcode{appId} \cite{eNotWinAppId}. For debugging purposes it is possible to tweak the windows registry so it shows the \enquote{System.AppUserModel.ID} in the file explorer details view \cite{showAppId}. During the startup sequence of the application the \lstcode{app.setAppUserModelId()} method has to be called. Finally, every notification object, be it the \lstcode{ToastNotification}, \lstcode{TileNotification}, or the \gls{html} 5 \lstcode{Notification} must have the \lstcode{appId} property set. The \lstcode{appId} is an arbitrary \lstcode{string} which should be unique. A \gls{guid} was used for the Jukebox project.
 
-The notification package uses the \enquote{nodert-win10-au} native Node module to be able to call native windows \gls{api}s. Therefore the \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similar to their corresponding C++ classes. Most notably they are constructed via an \gls{xml} tempalte. This template allows for banner images, cropped images, and many more visual elements beeing placed in the notification.
+The notification package uses the \enquote{nodert-win10-au} native Node module to call native Windows \gls{api}s. The \lstcode{ToastNotification} and \lstcode{TileNotification} objects are used similarly to their corresponding C++ classes. Most notably, the notifications are constructed using an \gls{xml} template. This template allows for banner images, cropped images, and many more visual elements to be placed in the notification.
 
-Although many features of the Windows 10 notification \gls{api} work not all do and some only do in certain circumstances. The \gls{wdc} page \zB lists a progress bar feature which is not working at all. Further there are many ways to display images \zB as app logo override, as hero image, or as inline image. Microsoft offers three different protocols to reference an image: \enquote{http://}, \enquote{ms-appx:///}, and \enquote{ms-appdata:///}. The \enquote{http://} protocol did not show an image while the \enquote{ms-appx:///} and \enquote{ms-appdata:///} worked but only if the application was run inside a \gls{uwp} model. \cite{toastContent}
+Although many features of the Windows 10 notification \gls{api} work, not all do and some only do in certain circumstances. The \gls{wdc} page, \zB lists a progress bar feature which does not work at all. Also, there are many ways to display images \zB as app logo override, as hero image, or as inline image. Microsoft offers three different protocols to reference an image: \enquote{http://}, \enquote{ms-appx:///}, and \enquote{ms-appdata:///}. The \enquote{http://} protocol did not show an image, while the \enquote{ms-appx:///} and \enquote{ms-appdata:///} worked, but only if the application was run inside a \gls{uwp} model. \cite{toastContent}
 
 \Subsubsection{Interactive Windows Notifications}
 
-Windows notification also support buttons, comboboxes, and inline replys. These interactive elements are not supported by default and the additional \enquote{electron-windows-interactive-notifications} package is needed.
+Windows notifications also support buttons, comboboxes, and inline replies. These interactive elements are not supported by default and the additional \enquote{electron-windows-interactive-notifications} package is needed.
 
-This package works by registering a \gls{com} server. Whenever a notification is interacted with the \gls{com} server is called with the information about which action the user chose and any data \revMark{die dazugehört}. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
+This package works by registering a \gls{com} server. Whenever a user interacts with a notification, the \gls{com} server is called with the information on the action chosen by the user any related data. The \gls{com} server then encodes this data into a string and calls the application via a protocol link.
 
-There are two steps this package requires at installation time. First a \enquote{TOAST\_ACTIVATOR\_CLSID} has to be set. This needs to be a unique string and there it is strongly recomended to use a \gls{guid}. According to the packages documentation this can be achived through setting the CLSID in the package.json configuration file or setting the \enquote{TOAST\_ACTIVATOR\_CLSID} environment variable. During testing it was discovered that the package.json method does not work \cite{clsidPackageJson}. Second the application protocol has to be set. This is possible via package.json and environment variables and here the package.json is not working as well. Both of these values have to be set at installation time since a \gls{dll} will be compile during the installation of the package. In this \gls{dll} these two values are saved as constants.
+At installation time the package requires two parameters. The first parameter to be set is called \enquote{TOAST\_ACTIVATOR\_CLSID}. This needs to be a unique string and it is strongly recommended to use a \gls{guid}. According to the package's documentation, this can be achieved through setting the CLSID in the package.json configuration file or setting the \enquote{TOAST\_ACTIVATOR\_CLSID} environment variable. Tests showed that the package.json method does not work \cite{clsidPackageJson}. Second, the application protocol has to be set. This is possible via package.json and environment variables and here, the package.json does not work either. Both of these values have to be set at installation time, since a \gls{dll} will be compiled during the installation of the package. In the \gls{dll} these two values are saved as constants.
 
-During the startup sequence of the Electron app the \gls{com} server has to be registered as well as the \enquote{TOAST\_ACTIVATOR\_CLSID}. This can be acived with the \lstcode{registerActivator()} and \lstcode{registerAppForNotificationSupport()} methods respectively, as shown in \myautoref{lst:setupWindowsNotifications.js}. To register the application as default protocol handler the \lstcode{app.setAsDefaultProtocolClient()} method may be used. This method requires the protocol name as well as a path to the executable as arguments.
+During the startup sequence of the Electron app, both the \gls{com} server the \enquote{TOAST\_ACTIVATOR\_CLSID} have to be registered. This can be achieved with the \lstcode{registerActivator()} and \lstcode{registerAppForNotificationSupport()} methods, respectively, as shown in \myautoref{lst:setupWindowsNotifications.js}. To register the application as default protocol handler, the \lstcode{app.setAsDefaultProtocolClient()} method may be used. This method requires the protocol name as well as a path to the executable as arguments.
 
 \file{setupWindowsNotifications.js}{Registration of the electron-windows-interactive-notifications package.}{JavaScript}
 
-Whenever the operating system calls a protocol link the application registered for that protocol is started. This means a new instance of the application is run. This is mostly not the desired behavior and therefore a way to communicate the information handed off to the second instance of the application, back to the first instance, is needed.
+Whenever the operating system calls a protocol link, the application registered for that protocol is started. This means a new instance of the application is executed. In most cases this is not the desired behavior. In order to communicate the information back to the first instance a communication channel is needed.
 
-Electron makes this possible with the \lstcode{app.makeSingleInstance()} method. This method returns a \lstcode{boolean} which returns \lstcode{false} if the currently running instance is the only one running and \lstcode{true} if not. Also this method takes a delegate which is executed only if another instance of the application is present. This delegate will be executed within the context of the main instance and is used to communicate any information transmitted via the protocol link (\myautoref{lst:singleInstance.js}).
+Electron makes this possible with the \lstcode{app.makeSingleInstance()} method. This method returns a \lstcode{boolean} which is \lstcode{false}, if the current instance is the only one running, and is \lstcode{true}, if not. Also, this method takes a delegate which is executed only if another instance of the application is present. This delegate will be executed within the context of the main instance and is used to communicate any information transmitted via the protocol link (\myautoref{lst:singleInstance.js}).
 
 \file{singleInstance.js}{Jukebox startup code to handle multiple instances.}{JavaScript}
 
@@ -144,4 +143,4 @@ Electron makes this possible with the \lstcode{app.makeSingleInstance()} method.
 
 \Subsubsection{Linux}
 
-For Linux there are no special packages available. Notifications will be shown using the \enquote{libnotify} library which can show notifications on any desktop environment that follows the Desktop Notification Specifications \cite{desktopNotificationSpec} \cite{electronNotifications}.
+There are no special packages available for Linux. Notifications will be shown using the \enquote{libnotify} library which can show notifications on any desktop environment that follows the Desktop Notification Specifications \cite{desktopNotificationSpec} \cite{electronNotifications}.
