started work on asp described nuget and owin

--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -2,9 +2,11 @@
 
 \Chapter{Angular}
 
+\revMark{TBD}
+
 \Section{Structure}
 
-This Section describes how an Angular application is structued.
+This Section describes how an Angular application is structued. \revMark{TBD}
 
 \Subsection[components]{Components}
 
