--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -324,6 +324,15 @@
 }
 
 
+@online{introASP,
+ author = {Microsoft},
+ year = {2018},
+ title = {Introduction to ASP.NET Core},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-2.1},
+ urldate = {2018-08-01}
+}
+
+
 @online{inversionOfControl,
  author = {Fowler, Martin},
  year = {23.01.2004},
@@ -491,7 +500,7 @@
  year = {04.01.2015},
  title = {ASP.NET: Understanding OWIN, Katana, and the Middleware Pipeline},
  url = {http://johnatten.com/2015/01/04/asp-net-understanding-owin-katana-and-the-middleware-pipeline/},
- urldate = {2017-03-09}
+ urldate = {2018-08-01}
 }
 
 
@@ -565,7 +574,7 @@
  year = {30.03.2017},
  title = {Task-based Asynchronous Programming},
  url = {https://docs.microsoft.com/en-us/dotnet/standard/parallel-programming/task-based-asynchronous-programming},
- urldate = {2018-02-02}
+ urldate = {2018-08-01}
 }
 
 
