--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -63,6 +63,33 @@
 }
 
 
+@online{aspCustomDI,
+ author = {Microsoft},
+ year = {2018},
+ title = {Dependency injection in ASP.NET Core},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/dependency-injection?view=aspnetcore-2.1},
+ urldate = {2018-08-02}
+}
+
+
+@online{aspFundamentals,
+ author = {Microsoft},
+ year = {2018},
+ title = {ASP.NET Core fundamentals},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/?view=aspnetcore-2.1&tabs=aspnetcore2x},
+ urldate = {2018-08-02}
+}
+
+
+@online{aspMiddleware,
+ author = {Microsoft},
+ year = {2018},
+ title = {ASP.NET Core Middleware},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/middleware/?view=aspnetcore-2.1&tabs=aspnetcore2x#creating-a-middleware-pipeline-with-iapplicationbuilder},
+ urldate = {2018-08-02}
+}
+
+
 @online{aspStartup,
  author = {Smith, Steve},
  year = {01.03.2017},
@@ -106,6 +133,15 @@
  title = {Atom Shell is now Electron},
  url = {https://electronjs.org/blog/electron},
  urldate = {2018-07-23}
+}
+
+
+@online{autofacCoreDoc,
+ author = {Autofac},
+ year = {2018},
+ title = {Autofac ASP.NET Core Documentation},
+ url = {https://autofaccn.readthedocs.io/en/latest/integration/aspnetcore.html},
+ urldate = {2018-08-02}
 }
 
 
@@ -370,10 +406,11 @@
 
 
 @online{kestrel,
- author = {Dykstra, Tom and Ross, Chris and Halter, Stephen},
- year = {03.08.2017},
+ author = {Microsoft},
+ year = {2018},
  title = {Introduction to Kestrel web server implementation in ASP.NET Core},
- urldate = {2018-01-31}
+ url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/servers/kestrel?tabs=aspnetcore2x&view=aspnetcore-2.1},
+ urldate = {2018-08-02}
 }
 
 
