--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,6 +5,7 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{iis}{IIS}{Internet Information Services}
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{ide}{IDE}{Integrated Development Environments}
 \newacronym{com}{COM}{Component Object Model}
